# utils

./: CMakeLists.txt  types.natvis
include/utils/: Array.h  Array.hpp  Exception.h  MemoryPool.h  Pointer.h  Pointer.hpp  String.h  types.h
include/utils/interfaces/: ILogHandler.h  IWithLogging.h  IWithUserData.h  IWithUserData.hpp
src/interfaces/: ILogHandler.cpp  IWithLogging.cpp  IWithUserData.cpp
src/util/: Exception.cpp  MemoryPool.cpp  Pointer.cpp  String.cpp
